--- a/TypeScript/playground/tsconfig.json
+++ b/TypeScript/playground/tsconfig.json
@@ -4,7 +4,8 @@
         "target": "es5",
         "noImplicitAny": false,
         "sourceMap": true,
-        "outFile": "js/app.js"
+        //"outFile": "js/app.js",
+        "outDir": "js/"
     },
     "exclude": [
         "node_modules"
