--- a/AngularIO/playground/package.json
+++ b/AngularIO/playground/package.json
@@ -26,16 +26,15 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "^2.6.2",
-
     "@types/angular": "^1.5.16",
     "@types/angular-cookies": "^1.4.2",
     "@types/angular-mocks": "^1.5.5",
     "@types/angular-resource": "^1.5.6",
     "@types/angular-route": "^1.3.2",
     "@types/angular-sanitize": "^1.3.3",
-    "@types/node": "^6.0.45"
+    "@types/node": "^6.0.45",
+    "concurrently": "^3.1.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.6.2"
   }
 }
